Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_exec_balancer@nop - dmesg-fail - RIP: 0010:i915_request_enable_breadcrumb
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_493/fi-bdw-5557u/igt@gem_exec_balancer@nop.html
6> [346.483840] Console: switching to colour dummy device 80x25
<6> [346.483893] [IGT] gem_exec_balancer: executing
<7> [346.511806] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [346.511983] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<5> [346.513324] Setting dangerous option reset - tainting kernel
<6> [346.524799] [IGT] gem_exec_balancer: starting subtest nop
<7> [346.560889] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [350.931675] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 2 created
<7> [355.356930] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [359.694516] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 2 created
<7> [364.072149] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [370.593507] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 2 created
<7> [370.597763] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 3 created
<4> [373.551246] stack segment: 0000 [#1] PREEMPT SMP PTI
<4> [373.551255] CPU: 2 PID: 1607 Comm: gem_exec_balanc Tainted: G U 5.7.0-rc4-gbd2e8a4803db-drmtip_493+ #1
<4> [373.551265] Hardware name: /NUC5i7RYB, BIOS RYBDWi35.86A.0362.2017.0118.0940 01/18/2017
<4> [373.551331] RIP: 0010:i915_request_enable_breadcrumb+0x144/0x380 [i915]
<4> [373.551341] Code: c7 c2 20 f1 42 c0 48 c7 c7 77 85 28 c0 e8 44 bc f2 ec bf 01 00 00 00 e8 5a 8e f2 ec 31 f6 bf 09 00 00 00 e8 6e 09 e3 ec 0f 0b <3b> 45 80 0f 89 5d ff ff ff 48 8b 6d 08 4c 39 e5 75 ee 49 8b 4d 38
<4> [373.551356] RSP: 0018:ffffb64d0114b9f8 EFLAGS: 00010083
<4> [373.551363] RAX: 00000000000036b2 RBX: ffffa310385096c0 RCX: 0000000000000003
<4> [373.551372] RDX: 00000000000036b2 RSI: 000000002ac5cf63 RDI: 00000000ffffffff
<4> [373.551379] RBP: dead000000000122 R08: ffffa31047075a50 R09: 00000000fffffffe
<4> [373.551385] R10: 0000000053a90a70 R11: 000000005e84b7e5 R12: ffffa3103fde38c0
<4> [373.551392] R13: ffffa3103fde3888 R14: ffffa30ff0982328 R15: ffffa30ff0982000
<4> [373.551401] FS: 00007f19f3359e40(0000) GS:ffffa3104ed00000(0000) knlGS:0000000000000000
<4> [373.551410] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [373.551414] CR2: 00007f19f2aac778 CR3: 0000000232b0c004 CR4: 00000000003606e0
<4> [373.551421] Call Trace:
<4> [373.551466] ? dma_i915_sw_fence_wake+0x40/0x40 [i915]
<4> [373.551506] ? dma_i915_sw_fence_wake+0x40/0x40 [i915]
<4> [373.551515] __dma_fence_enable_signaling+0x60/0x160
<4> [373.551558] ? dma_i915_sw_fence_wake+0x40/0x40 [i915]
<4> [373.551564] dma_fence_add_callback+0x44/0xd0
<4> [373.551605] __i915_sw_fence_await_dma_fence+0x6f/0xc0 [i915]
<4> [373.551665] __i915_request_commit+0x442/0x5b0 [i915]
<4> [373.551721] i915_gem_do_execbuffer+0x17fb/0x2eb0 [i915]
<4> [373.551730] ? deactivate_slab.isra.85+0x485/0x8a0
<4> [373.551783] ? i915_gem_execbuffer2_ioctl+0xc6/0x4e0 [i915]
<4> [373.551798] ? lock_acquire+0xb5/0x3b0
<4> [373.551802] ? __might_fault+0x39/0x90
<4> [373.551808] ? __might_fault+0x39/0x90
<4> [373.551863] i915_gem_execbuffer2_ioctl+0x116/0x4e0 [i915]
<4> [373.551919] ? i915_gem_execbuffer_ioctl+0x300/0x300 [i915]
<4> [373.551926] drm_ioctl_kernel+0xb0/0xf0
<4> [373.551934] drm_ioctl+0x2e1/0x390
<4> [373.551986] ? i915_gem_execbuffer_ioctl+0x300/0x300 [i915]
<4> [373.551999] ? retint_kernel+0x2b/0x2b
<4> [373.552006] ksys_ioctl+0x7b/0x90
<4> [373.552010] __x64_sys_ioctl+0x11/0x20
<4> [373.552015] do_syscall_64+0x4f/0x240
<4> [373.552023] entry_SYSCALL_64_after_hwframe+0x49/0xb3
<4> [373.552030] RIP: 0033:0x7f19f27d65d7
<4> [373.552035] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4> [373.552051] RSP: 002b:00007ffd53138bf8 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [373.552061] RAX: ffffffffffffffda RBX: 00000000000000a7 RCX: 00007f19f27d65d7
<4> [373.552067] RDX: 00007ffd531394e0 RSI: 0000000040406469 RDI: 0000000000000005
<4> [373.552073] RBP: 00007ffd531394e0 R08: 0000000000097554 R09: ffffffffffffffff
<4> [373.552082] R10: 0000000000000175 R11: 0000000000000246 R12: 0000000040406469
<4> [373.552091] R13: 0000000000000005 R14: 0000000000001800 R15: 00007ffd53139010
<4> [373.552099] Modules linked in: vgem snd_hda_intel i915 mei_hdcp snd_hda_codec_hdmi x86_pkg_temp_thermal snd_hda_codec_realtek snd_hda_codec_generic coretemp crct10dif_pclmul snd_intel_dspcfg crc32_pclmul snd_hda_codec snd_hwdep ghash_clmulni_intel snd_hda_core snd_pcm e1000e lpc_ich mei_me ptp mei prime_numbers pps_core [last unloaded: i915]
<4> [373.552136] ---[ end trace aec7a2ac8c8498c1 ]---